# klfengine

./: .gitignore  CMakeLists.txt  LICENSE.txt  Pipfile  README.rst  fetch_and_setup_dependencies.py  fetch_and_setup_dependencies.sh  pyproject.toml
cmake/: Findarun11299_cppsubprocess.cmake  klfengineConfig.cmake.in  klfengine_get_version.cmake  klfengine_set_deps_interface_tgt_prop.cmake  klfengine_setup_dependencies.cmake
doc/: Doxyfile  Makefile  apidoc.rst  apitodo.rst  conf.py  index.rst  setup.rst  using.rst
doc/_static/: custom.css  klflogo.afdesign
doc/api/: base.rst  eng_klflatexpackage.rst  eng_latextoimage.rst  engine.rst  format.rst  ghostscript.rst  helpers.rst  inputs.rst  klfimplpkg_engine.rst  latextoimage_engine.rst
include/klfengine/: engine_run_implementation  format  format_spec  ghostscript_interface  impl.hxx  implementation  klfengine  klfimplpkg_engine  latex_dvips_gs_engine  latextoimage_engine  length  process  run  temporary_directory  version
include/klfengine/convert/: gs_image
include/klfengine/engines/: klflatexpackage  latextoimage
include/klfengine/h/: basedefs.h  engine.h  engine_run_implementation.h  format.h  format_spec.h  ghostscript_interface.h  input.h  length.h  process.h  run.h  settings.h  temporary_directory.h  value.h  version.h  version_number_raw.h
include/klfengine/h/convert/: converter.h  gs_image.h
include/klfengine/h/detail/: filesystem.h  provide_fs.h  simple_gs_interface.h  utils.h
include/klfengine/h/engines/klflatexpackage/: engine.h  run_implementation.h
include/klfengine/h/engines/latextoimage/: engine.h  run_implementation.h
include/klfengine/h/klfimplpkg_engine/: engine.h  run_implementation.h
include/klfengine/h/latex_dvips_gs_engine/: engine.h  run_implementation.h
include/klfengine/h/latextoimage_engine/: engine.h  run_implementation.h
include/klfengine/impl/: basedefs.hxx  detail.hxx  engine.hxx  engine_run_implementation.hxx  format.hxx  format_spec.hxx  ghostscript_interface.hxx  input.hxx  klfimplpkg_engine.hxx  latex_dvips_gs_engine.hxx  latextoimage_engine.hxx  length.hxx  process.hxx  run.hxx  settings.hxx  temporary_directory.hxx  value.hxx  version.hxx
include/klfengine/impl/convert/: gs_image.hxx
include/klfengine/impl/detail/: filesystem.hxx  simple_gs_interface.hxx
include/klfengine/impl/engines/: klflatexpackage.hxx  latextoimage.hxx
include/klfengine/impl/engines/klflatexpackage/: engine.hxx  klfimpl_sty_data.h  run_implementation.hxx
include/klfengine/impl/engines/latextoimage/: engine.hxx  run_implementation.hxx
include/klfengine/impl/klfimplpkg_engine/: engine.hxx  klfimpl_sty_data.h  run_implementation.hxx
include/klfengine/impl/latex_dvips_gs_engine/: engine.hxx  run_implementation.hxx
include/klfengine/impl/latextoimage_engine/: engine.hxx  run_implementation.hxx
klfengine/: basedefs  basedefs.h  engine  engine.h  engine_run_implementation.h  input  input.h  run.h  settings  settings.h  value  value.h
klfengine/dummy_engine/: engine.h
klfengine/h/: engine.h  run.h  settings.h
klfengine/impl/: engine.hxx  run.hxx  value.hxx
ltxsty/: .gitignore  bg-img-hi.afdesign  example_2_bg.tex  example_use_klfimpl_sty.cxx  klfimpl.dtx  klfimpl.ins  klfimpl.sty  klfimpl_sty_data.h
ltxsty/some_examples/: example.tex  example_2_bg.tex  example_3.tex  klfimpl.sty
ltxsty/test/: README.md  helpers.py  test_cases.py
ltxsty/test/cases/: inline_a.tex  inline_text.tex  inlinemathaligned.tex  inlinemathalignedcolor.tex  minipage_textwidth.tex
ltxsty/test/debug/: .gitignore
pyklf/: CMakeLists.txt
pyklf/cxx/: pyklf.cxx
templates/: cxx_test  h  hxx
test/: CMakeLists.txt  test_basedefs.cxx  test_detail_filesystem.cxx  test_detail_simple_gs_interface.cxx  test_detail_utils.cxx  test_engine.cxx  test_engine_run_implementation.cxx  test_engines_klflatexpackage_engine.cxx  test_engines_klflatexpackage_run_implementation.cxx  test_engines_latextoimage_engine.cxx  test_engines_latextoimage_run_implementation.cxx  test_format.cxx  test_format_spec.cxx  test_ghostscript_interface.cxx  test_inline_impl_1.cxx  test_inline_impl_2.cxx  test_input.cxx  test_klfimplpkg_engine.cxx  test_klfimplpkg_engine_engine.cxx  test_klfimplpkg_engine_run_implementation.cxx  test_latex_dvips_gs_engine_engine.cxx  test_latex_dvips_gs_engine_run_implementation.cxx  test_latextoimage_engine_engine.cxx  test_latextoimage_engine_run_implementation.cxx  test_length.cxx  test_main.cxx  test_process.cxx  test_run.cxx  test_separate_impl.cxx  test_settings.cxx  test_temporary_directory.cxx  test_usage_subprocess.cxx  test_value.cxx  test_version.cxx  testutils.hxx
test/dummy_engine/: dummy_engine.hxx
